add_subdirectory(aux)

include(add_unit_test)
set(link_libraries "libsarus_testaux")

add_unit_test(libsarus_CLIArguments test_CLIArguments.cpp "${link_libraries}")
add_unit_test(libsarus_Error test_Error.cpp "${link_libraries}")
add_unit_test(libsarus_Flock test_Flock.cpp "${link_libraries}")
add_unit_test(libsarus_HookUtility test_HookUtility.cpp "${link_libraries}")
add_unit_test(libsarus_Lockfile test_Lockfile.cpp "${link_libraries}")
add_unit_test(libsarus_Logger test_Logger.cpp "${link_libraries}")
add_unit_test(libsarus_MountParser test_MountParser.cpp "${link_libraries}")
add_unit_test(libsarus_PasswdDB test_PasswdDB.cpp "${link_libraries}")
add_unit_test_as_root(libsarus_DeviceMount test_DeviceMount.cpp "${link_libraries}")
add_unit_test_as_root(libsarus_DeviceParser test_DeviceParser.cpp "${link_libraries}")
add_unit_test_as_root(libsarus_MountUtility test_MountUtility.cpp "${link_libraries}")
add_unit_test_as_root(libsarus_Mount test_Mount.cpp "${link_libraries}")
add_unit_test_as_root(libsarus_Utility test_Utility.cpp "${link_libraries}")
